# musicweb

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  LICENSE  MIGRATION_SUMMARY.md  MOBILE_FEATURES.md  Makefile  README.md  README_APPENDIX.md  SECURITY.md  docker-compose.yml  packages.txt  pyproject.toml  requirements-dev.txt  requirements-streamlit.txt  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  deploy-streamlit.yml  release.yml
config/.streamlit/: config.toml
config/prometheus/: prometheus.yml
docs/: index.md  installation.md
examples/: basic-comparison.py
scripts/: build.sh  docker-entrypoint.sh  setup-dev.sh
scripts/utilities/: detailed_analyzer.py  header_converter.py  track_analyzer.py
src/musicweb/: __init__.py
src/musicweb/cli/: __init__.py  main.py
src/musicweb/core/: __init__.py  comparison.py  enrichment.py  matching.py  models.py
src/musicweb/integrations/: __init__.py  deduplication.py  playlist.py  youtube_music.py
src/musicweb/utils/: __init__.py  error_handling.py  file_utils.py  logging.py  logging_config.py  metrics.py  validation.py
src/musicweb/web/: __init__.py  app.py  config.py  playlist_audit.py
src/musicweb/web/assets/: __init__.py  test_logo.py
src/musicweb/web/components/: __init__.py  responsive.py
src/musicweb/web/styles/: mobile.css
tests/: __init__.py  conftest.py
tests/integration/: test_web_interface.py
tests/unit/test_core/: test_comparison.py  test_models.py
